// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on GifExpertApp component Should match with the snapshot 1`] = `
<Fragment>
  <h2
    className="title"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <EmptySearch />
</Fragment>
`;

exports[`Test on GifExpertApp component Should show a list of categories 1`] = `
<Fragment>
  <h2
    className="title"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The Flash"
      key="The Flash"
    />
    <GifGrid
      category="Superman"
      key="Superman"
    />
     
  </ol>
</Fragment>
`;
